--- a/res/values-ru/h_strings.xml
+++ b/res/values-ru/h_strings.xml
@@ -108,6 +108,7 @@
     <string name="providers_tarot_url">http://www.tarot.com/</string>
     <string name="preference">Настройки</string>
     <string name="preference_base">Основные</string>
+    <string name="preference_ad">Реклама</string>
     <string name="preference_date_1">Дата вашего рождения</string>
     <string name="preference_date_2">Введите когда вы родились</string>
     <string name="preference_time_1">Время вашего рождения</string>
