--- a/res/values/h_strings.xml
+++ b/res/values/h_strings.xml
@@ -286,6 +286,7 @@
     <string name="providers_tarot_url">http://www.tarot.com/</string>
     <string name="preference">Settings</string>
     <string name="preference_base">Base</string>
+    <string name="preference_ad">Advertisement</string>
     <string name="preference_date_1">Your birth date</string>
     <string name="preference_date_2">Enter when you born</string>
     <string name="preference_time_1">Your birth time</string>
