--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -60,6 +60,9 @@
             android:key="preference_locales"
             android:summary="@string/preference_locale_2"
             android:title="@string/preference_locale_1" />
+    </PreferenceCategory>
+    
+        <PreferenceCategory android:title="@string/preference_ad" >
         <Preference
             android:id="@+id/preference_trial"
             android:icon="@drawable/logo_trial"
