--- a/res/values-de/h_strings.xml
+++ b/res/values-de/h_strings.xml
@@ -43,7 +43,7 @@
         <item>Einstellungen</item>
     </string-array>
 
-    <string name="app_name">Horoskop 24/7</string>
+    <string name="app_name">Horoskop</string>
     <string name="error_message">Überprüfen Sie Ihre Verbindung und versuchen Sie es erneut.</string>
     <string name="error_retry">wiederholen</string>
     <string name="preference">Einstellungen</string>
@@ -67,7 +67,7 @@
     <string name="share_content_horo_for">Horoskop für</string>
     <string name="share_content_horo_for_2">Für Sternzeichen:</string>
     <string name="share_content_url">https://play.google.com/store/apps/details?id=com.BBsRs.horoscopeFullNew</string>
-    <string name="share_send_from">Nachricht aus der Anwendung Horoskop 24/7</string>
+    <string name="share_send_from">Nachricht aus der Anwendung Horoskop</string>
     <string name="share_personal_1">Horoskop</string>
     <string name="share_personal_2">für Anwender</string>
     <string name="share_money_1">Geld</string>
