--- a/res/layout/activity_loader.xml
+++ b/res/layout/activity_loader.xml
@@ -1,12 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="centerCrop"
-        android:src="@drawable/hexography_salmon" />
+    android:layout_height="fill_parent"
+    android:background="@color/slider_menu_custom_color_pink" >
 
     <RelativeLayout
         android:id="@+id/contentLayout"
@@ -15,26 +10,29 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true" >
 
-        <TextView
-            android:id="@+id/textView1"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/app_name"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="@color/simple_white_color"
-            android:textStyle="bold|italic" />
+            android:orientation="vertical" >
 
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/textView1"
-            android:layout_alignRight="@+id/textView1"
-            android:layout_below="@+id/textView1"
-            android:maxLines="2"
-            android:text="@string/introduce_one"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:textColor="@color/not_simple_white_color" />
+            <ImageView
+                android:id="@+id/logo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/logo_b" />
+
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="@string/app_name"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="@color/simple_white_color"
+                android:textSize="22sp"
+                android:textStyle="bold|italic" />
+
+        </LinearLayout>
 
     </RelativeLayout>
 
