change fonts on error event

--- a/res/layout/fragment_content_show.xml
+++ b/res/layout/fragment_content_show.xml
@@ -52,6 +52,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
+                    android:textColor="@color/simple_white_color"
                     android:text="@string/error_retry" />
             </LinearLayout>
         </RelativeLayout>
