--- a/res/values/h_colors.xml
+++ b/res/values/h_colors.xml
@@ -12,5 +12,6 @@
     <color name="green_hard">#690</color>
     <color name="red">#f00</color>
     <color name="gray_soft_soft">#ddd</color>
+    <color name="gray_hard_hard">#555</color>
 
 </resources>
