--- a/res/values-ru/h_strings.xml
+++ b/res/values-ru/h_strings.xml
@@ -48,6 +48,9 @@
     <string name="error_retry">Попробовать снова</string>
     <string name="preference">Настройки</string>
     <string name="preference_base">Основные</string>
+    <string name="preference_notifications">Уведомления</string>
+    <string name="preference_notifications_1">Показ уведомлений</string>
+    <string name="preference_notifications_2">Время</string>
     <string name="preference_ad">Реклама</string>
     <string name="preference_date_1">Дата вашего рождения</string>
     <string name="preference_date_2">Введите когда вы родились</string>
