--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -33,4 +33,17 @@
             android:summary="@string/preference_locale_2"
             android:title="@string/preference_locale_1" />
     </PreferenceCategory>
+    <PreferenceCategory android:title="@string/preference_notifications" >
+        <CheckBoxPreference
+            android:id="@+id/preference_show_notifications"
+            android:defaultValue="true"
+            android:key="preference_show_notifications"
+            android:title="@string/preference_notifications_1" />
+
+        <TimePreference
+            android:id="@+id/preference_show_notifications_time"
+            android:key="preference_show_notifications_time"
+            android:title="@string/preference_notifications_2" />
+    </PreferenceCategory>
+
 </PreferenceScreen>
