--- a/res/values-ru/h_strings.xml
+++ b/res/values-ru/h_strings.xml
@@ -44,6 +44,7 @@
     </string-array>
 
     <string name="app_name">Гороскоп</string>
+    <string name="set_date_first">Чтобы начать, нужно ввести дату рождения</string>
     <string name="error_message">Проверьте ваше подключение к сети, и попробуйте снова.</string>
     <string name="error_retry">Попробовать снова</string>
     <string name="preference">Настройки</string>
