update link to application

--- a/res/values-de/h_strings.xml
+++ b/res/values-de/h_strings.xml
@@ -65,7 +65,7 @@
     <string name="share">Aktie</string>
     <string name="share_content_horo_for">Horoskop für</string>
     <string name="share_content_horo_for_2">Für Sternzeichen:</string>
-    <string name="share_content_url">https://play.google.com/store/apps/details?id=com.BBsRs.horoscopeFullNew</string>
+    <string name="share_content_url">https://play.google.com/store/apps/details?id=com.BBsRs.horoscopeNewEdition</string>
     <string name="share_send_from">Nachricht aus der Anwendung Horoskop</string>
     <string name="share_personal_1">Horoskop</string>
     <string name="share_money_1">Geld</string>
