--- a/res/values-ru/h_strings.xml
+++ b/res/values-ru/h_strings.xml
@@ -65,7 +65,7 @@
     <string name="share">Поделиться</string>
     <string name="share_content_horo_for">Гороскоп на</string>
     <string name="share_content_horo_for_2">для знака зодиака:</string>
-    <string name="share_content_url">https://play.google.com/store/apps/details?id=com.BBsRs.horoscopeFullNew</string>
+    <string name="share_content_url">https://play.google.com/store/apps/details?id=com.BBsRs.horoscopeNewEdition</string>
     <string name="share_personal_1">гороскоп</string>
     <string name="share_money_1">Денежный</string>
     <string name="share_send_from">Отправлено из приложения Гороскоп</string>
