--- a/res/values/h_strings.xml
+++ b/res/values/h_strings.xml
@@ -241,7 +241,7 @@
     <string name="share">Share</string>
     <string name="share_content_horo_for">Horoscope for</string>
     <string name="share_content_horo_for_2">for zodiac sign:</string>
-    <string name="share_content_url">https://play.google.com/store/apps/details?id=com.BBsRs.horoscopeFullNew</string>
+    <string name="share_content_url">https://play.google.com/store/apps/details?id=com.BBsRs.horoscopeNewEdition</string>
     <string name="share_send_from">Send from application Horoscope</string>
     <string name="share_personal_1">horoscope</string>
     <string name="share_money_1">Money</string>
