--- a/res/values/h_strings.xml
+++ b/res/values/h_strings.xml
@@ -229,6 +229,8 @@
     <string name="preference_notifications_1">Show notifications</string>
     <string name="preference_notifications_2">Time</string>
     <string name="preference_ad">Advertisement</string>
+    <string name="preference_ad_disable">Disable advertisement</string>
+    <string name="preference_ad_disabled_succesfully">Advertising disabled</string>
     <string name="preference_date_1">Your birth date</string>
     <string name="preference_date_2">Enter when you born</string>
     <string name="preference_zodiac_signs_2">Select your zodiac sign</string>
