--- a/res/values/h_strings.xml
+++ b/res/values/h_strings.xml
@@ -40,6 +40,7 @@
 
     <!-- This data below closed to translate ! Using only for download mail.ru horoscope -->
     <string name="mail_ru_title">Гороскоп</string>
+    <string name="mail_ru_copyright">© lady.mail.ru</string>
 
     <string-array name="mail_ru_horoscopes">
         <item>Вчера</item>
@@ -81,6 +82,7 @@
 
     <!-- This data below closed to translate ! Using only for download horoscope.com horoscope -->
     <string name="horoscope_com_title">Horoscope</string>
+    <string name="horoscope_com_copyright">© horoscope.com</string>
 
     <string-array name="horoscope_com_horoscopes">
         <item>Yesterday</item>
@@ -120,6 +122,7 @@
 
     <!-- This data below closed to translate ! Using only for download de.horoscope.yahoo. horoscope -->
     <string name="de_horoskop_yahoo_com_title">Horoskop</string>
+    <string name="de_horoskop_yahoo_com_copyright">© de.horoskop.yahoo.com</string>
 
     <string-array name="de_horoskop_yahoo_com_horoscopes">
         <item>Gestern</item>
